--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.3.0",
-    "react-native": "0.54.4"
+    "react-native": "0.54.4",
+    "react-navigation": "^1.5.8"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
