--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "react": "16.3.0",
     "react-native": "0.54.4",
+    "react-native-camera": "^1.0.3",
     "react-navigation": "^1.5.8"
   },
   "devDependencies": {
